--- a/res/layout/main_tab.xml
+++ b/res/layout/main_tab.xml
@@ -27,12 +27,19 @@
                     android:layout_height="match_parent" >
                 </LinearLayout>
             </FrameLayout>
+			<View 
+			    android:layout_width="match_parent"
+			    android:layout_height="1dp"
+			    android:background="#e8e8e8"/>
 
             <TabWidget
                 android:id="@android:id/tabs"
-                android:layout_weight="0"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+               	android:divider="#00FFFFFF"
+			>
+
             </TabWidget>
         </LinearLayout>
     </TabHost>
