--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -8,5 +8,11 @@
     <dimen name="font_30">30sp</dimen>
     <dimen name="main_tabItem_font">17sp</dimen>
     <dimen name="main_tabItem_ivWidth">30dp</dimen>
-
+    <dimen name="drop_down_list_header_padding_top">12dp</dimen>
+    <dimen name="drop_down_list_header_padding_bottom">15dp</dimen>
+    <dimen name="drop_down_list_header_release_min_distance">20dp</dimen>
+    <dimen name="drop_down_list_header_progress_bar_height">36dp</dimen>
+    <dimen name="drop_down_list_footer_progress_bar_height">36dp</dimen>
+    <dimen name="drop_down_list_footer_button_margin_left">8dp</dimen>
+    <dimen name="drop_down_list_footer_button_height">48dp</dimen>
 </resources>
