--- a/res/layout/recommand_fragment.xml
+++ b/res/layout/recommand_fragment.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  	xmlns:listViewAttr="http://schemas.android.com/apk/res/com.qlfsoft.app.livewallpaper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
- <cn.trinea.android.common.view.DropDownListView
-        android:id="@+id/recommand_listview"
+
+    <GridView
+        android:id="@+id/reccommand_gv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawSelectorOnTop="false"
-        android:paddingBottom="@dimen/drop_down_list_header_padding_bottom"
-        listViewAttr:isDropDownStyle="true"
-        listViewAttr:isOnBottomStyle="true"
-        listViewAttr:isAutoLoadOnBottom="true" />
+        android:padding="3dp"
+        android:numColumns="2" >
+    </GridView>
 
 </LinearLayout>
