--- a/res/layout/reommand_item.xml
+++ b/res/layout/reommand_item.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="3dp"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/recommand_item_iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/a01" />
+        android:scaleType="fitXY" />
 
 </LinearLayout>
