--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -7,12 +7,14 @@
 
    <com.viewpagerindicator.TabPageIndicator 
        android:id="@+id/activity_home_indicator"
+       android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    </com.viewpagerindicator.TabPageIndicator>
     <android.support.v4.view.ViewPager
         android:id="@+id/activity_home_pager"
+        android:background="@android:color/white"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
