--- a/res/layout/recommand_fragment.xml
+++ b/res/layout/recommand_fragment.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@android:color/white"
+    android:orientation="vertical"
+    android:padding="5dp" >
 
     <GridView
         android:id="@+id/reccommand_gv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
         android:numColumns="2" >
     </GridView>
 
