--- a/res/layout/imageshow.xml
+++ b/res/layout/imageshow.xml
@@ -24,7 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:background="#00ffffff"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:background="@drawable/imgshow_btn"
         android:text="设为壁纸" />
 
 </FrameLayout>
