--- a/res/layout/imageshow.xml
+++ b/res/layout/imageshow.xml
@@ -33,4 +33,27 @@
         android:background="@drawable/imgshow_btn"
         android:text="设为壁纸" />
 
+    <LinearLayout
+        android:id="@+id/imgshow_loading"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading......"
+            android:textSize="@dimen/font_25" />
+
+    </LinearLayout>
+
 </FrameLayout>
